# starsector-mod-JapaneseTranslation

./: .gitattributes  .gitignore  Changelog.md  ColorCode.mk  Help.mk  JapaneseTranslation.version  LICENSE  Makefile  README.md  Readme.md  pyproject.toml
.github/: auto_assign.yml  semantic.yml
.github/workflows/: issues.yml  pull_request.yml
Japanese Translation/: mod_info.json
Japanese Translation/data/campaign/: rules.csv
Japanese Translation/data/hullmods/: hull_mods.csv
data/campaign/: rules.csv
mod/: JapaneseTranslation.changelog  JapaneseTranslation.version  mod_info.json
mod/data/config/version/: version_files.csv
mod/data/hullmods/: hull_mods.csv
src/: hullmod2pot.py  mo2hullmod.py  zws.py
trans/: Makefile  TransCommon.mk  hull_mods.orig.csv.ja.po  hull_mods.orig.csv.pot
trans/campaign/: Makefile  rules.csv.po  rules.csv.toml  rules.po  rules.toml
trans/config/: Makefile  tag_data.json.po  tag_data.json.toml
trans/hullmods/: Makefile  hull_mods.csv.po  hull_mods.csv.toml  hull_mods.po  hull_mods.toml  hullmods.toml
trans/strings/: Makefile  descriptions.csv.po  descriptions.csv.toml  ship_names.json.po  ship_names.json.toml  strings.json.po  strings.json.toml  strings.po  strings.toml  tips.json.po  tips.json.toml  tooltips.json.po  tooltips.json.toml
trans/world/: Makefile
trans/world/factions/: Makefile  default_fleet_type_names.json.po  default_fleet_type_names.json.toml  default_ranks.json.po  default_ranks.json.toml  default_ranks.po  default_ranks.toml
