[tool.poetry]
name        = "starsector-mod-japanesetranslation"
version     = "0.1.3"
description = "Japanese Translation for Starsector"
authors     = [ "Hiroshi Miura <hirmiura@gmail.com>" ]
license     = "MIT"
readme      = "README.md"


[tool.poetry.dependencies]
python      = "^3.11"
pydantic    = "^2.4.2"
jsonpath-ng = "^1.6.0"
hjson       = "^3.1.0"


[tool.poetry.group.dev.dependencies]
black            = "^23.3.0"
flake8           = "^6.0.0"
flake8-pyproject = "^1.2.3"
isort            = "^5.12.0"
mypy             = "^1.3.0"
pytest           = "^7.3.1"


[build-system]
requires      = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true
no_implicit_optional   = true
warn_redundant_casts   = true
warn_unused_ignores    = false


[tool.black]
line-length = 100
target-version = [ 'py311' ]
include = '\.pyi?$'
exclude = '''
(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | \.vscode
    | Starsector
)
'''


[tool.flake8]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    ".vscode",
    "__pycache__",
    "tests/*",
    "Starsector",
]
ignore = "E203,W503"
max-complexity = 10
max-line-length = 100


[tool.isort]
include_trailing_comma = true
line_length            = 100
multi_line_output      = 3
profile                = "black"


[tool.pyright]
include = [ "bin" ]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".venv",
    ".vscode",
    "**/__pycache__",
    "Starsector",
]
pythonVersion = "3.11"
pythonPlatform = "Linux"
